// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostPageBreadcrumb - Snapshots > matches snapshot for non-truncated state (2 items) 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="inline-flex"
    data-testid="post-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-2.5"
    >
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-0"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            John
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-foreground"
        data-testid="breadcrumb-item-1"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Satoshi
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PostPageBreadcrumb - Snapshots > matches snapshot for non-truncated state (3 items) 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="inline-flex"
    data-testid="post-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-2.5"
    >
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-0"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            John
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-1"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Satoshi
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-foreground"
        data-testid="breadcrumb-item-2"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Anna
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PostPageBreadcrumb - Snapshots > matches snapshot for truncated state (5 items) 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="inline-flex"
    data-testid="post-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-2.5"
    >
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-0"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            John
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex items-center gap-1 outline-none"
          data-state="closed"
          data-testid="breadcrumb-ellipsis-trigger"
          id="radix-normalized"
          type="button"
        >
          <span
            aria-hidden="true"
            class="flex items-center justify-center h-4 w-4"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="19"
                cy="12"
                r="1"
              />
              <circle
                cx="5"
                cy="12"
                r="1"
              />
            </svg>
            <span
              class="sr-only"
            >
              More
            </span>
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-3"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Alice
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-foreground"
        data-testid="breadcrumb-item-4"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Bob
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`PostPageBreadcrumb - Snapshots > matches snapshot for truncated state (6 items) 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="inline-flex"
    data-testid="post-breadcrumb"
  >
    <ol
      class="flex flex-wrap items-center gap-2.5"
    >
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-0"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            John
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="flex items-center gap-1 outline-none"
          data-state="closed"
          data-testid="breadcrumb-ellipsis-trigger"
          id="radix-normalized"
          type="button"
        >
          <span
            aria-hidden="true"
            class="flex items-center justify-center h-4 w-4"
            role="presentation"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ellipsis h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="1"
              />
              <circle
                cx="19"
                cy="12"
                r="1"
              />
              <circle
                cx="5"
                cy="12"
                r="1"
              />
            </svg>
            <span
              class="sr-only"
            >
              More
            </span>
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-muted-foreground hover:text-foreground transition-colors cursor-pointer"
        data-testid="breadcrumb-item-4"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Bob
          </span>
        </button>
      </li>
      <li
        aria-hidden="true"
        class="text-muted-foreground shrink-0 w-[15px] h-[15px]"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-full w-full"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="flex items-center justify-center gap-2.5 text-foreground"
        data-testid="breadcrumb-item-5"
      >
        <button
          class="flex items-center gap-1"
          type="button"
        >
          <span
            class="font-sans text-sm leading-5 font-bold"
          >
            Charlie
          </span>
        </button>
      </li>
    </ol>
  </nav>
</div>
`;
